fix shadow cut off from bottom

--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,7 @@ body {
 
 .DeliveryStatusItems {
   margin: 12px 0 0 0;
+  padding-bottom: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
